# ivasat

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
include/ivasat/: ivasat.h
scripts/: benchmark.py
src/: Allocator.h  CMakeLists.txt  Clause.cpp  Clause.h  DimacsParser.cpp  Solver.cpp  Solver.h  SolverUtils.cpp  main.cpp
unittests/: CMakeLists.txt  DimacsParserTest.cpp  SolverTest.cpp
